--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,10 @@
       <br><br>
       <ul class="list-group">
         <li
-          class="list-group-item">
+          class="list-group-item"
+          *ngFor="let number of numbers"
+          >
+          {{ number }}
         </li>
       </ul>
       <ng-template [ngIf]="onlyOdd">
